# terminal-arcade

./: AGENTS.md  README.md  pyproject.toml
bookshelf/: README.md  __init__.py  __main__.py  app.py  storage.py
bookshelf/data/: books.py  books_fiction.py  books_history.py  books_motivation.py  books_philosophy.py  books_psychology.py  books_romance.py  books_science.py  books_startup.py  categories.py  fetcher.py  quotes.py  quotes_fiction.py  quotes_psych_history.py  quotes_science_philosophy.py
bookshelf/screens/: book_detail.py  collection.py  search.py  shelf.py
bookshelf/skill/: config.py  hook.py
bookshelf/ui/: ascii_art.py  colors.py  widgets.py
chess_game/: README.md  __init__.py  __main__.py  core.py  game.py  storage.py
dino-game/: dino.py
dino_game/: README.md  __init__.py  __main__.py  assets.py  audio.py  game.py  generated_svg_frames.py  storage.py
scripts/: generate_audio_assets.py  generate_dino_svg_assets.py
snake_game/: README.md  __init__.py  __main__.py  game.py  storage.py
star_blast/: README.md  __init__.py  __main__.py  game.py  storage.py
terminal_arcade/: __init__.py  __main__.py  launcher.py
tests/: test_arcade.py  test_bookshelf_hook.py  test_chess.py  test_game.py  test_snake.py  test_star_blast.py  test_storage.py  test_tetris.py
tetris_game/: README.md  __init__.py  __main__.py  game.py  storage.py
