[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-arcade"
version = "0.4.0"
description = "Terminal games: a dinosaur runner, snake game, and an interactive bookshelf explorer."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["game", "terminal", "curses", "runner", "snake"]
license = "MIT"

[project.scripts]
arcade = "terminal_arcade.launcher:run"
dino-run = "dino_game.game:run"
snake-game = "snake_game.game:run"
bookshelf = "bookshelf.app:run"

[tool.setuptools]
packages = ["dino_game", "snake_game", "bookshelf", "bookshelf.data", "bookshelf.screens", "bookshelf.ui", "bookshelf.skill", "terminal_arcade"]
